# TeleBoard

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  user_assignments.json
knowledge/: company_policies.txt  product_specs.txt
src/tele_to_trello/: __init__.py  main.py
src/tele_to_trello/crews/: telegram_jira_crew.py
src/tele_to_trello/crews/config/: agents.yaml  tasks.yaml
src/tele_to_trello/tools/: jira_mcp_tool.py
src/tele_to_trello/utils/: mcp_client.py
